chore: Upgrade language level to 17. Some sample refactorings related to language level changes.